Pending changes in the mainline
===============================


Version 2.7 (2020-12-10)
========================

* Support of dynamic linking against the system-wide Orthanc framework library
* Upgrade to Orthanc framework 1.8.1


Version 2.6 (2020-05-26)
========================

* Move the GDCM decoder out of the Orthanc Web viewer plugin as a
  separate plugin: https://book.orthanc-server.com/plugins/gdcm.html
* Performance: Replaced "OrthancPluginRegisterRestCallback" by
  "OrthancPluginRegisterRestCallbackNoLock"
* Authorization tokens passed as url search params in Orthanc Explorer
  are now transmitted to the viewer and included as headers in every
  HTTP request to the Rest API easing the usage of the Authorization
  plugin
* Upgrade to Orthanc framework 1.7.0


Version 2.5 (2019-02-27)
========================

* Upgrade to GDCM 2.8.8 for static builds
* Upgrade to Orthanc framework 1.5.5


Version 2.4 (2018-04-23)
========================

* Disable pinch zoom on mobile devices
* Fix download of DICOM instance from the toolbox
* Fix for Osimis issue WVB-319: Some images are not loading in US_MF
* Support of rendering RGB48 lookup tables (palette), if Orthanc SDK >= 1.3.1
* Support of OpenBSD
* Support of Linux Standard Base
* Resort to Orthanc framework 1.3.2
* Upgrade to GDCM 2.8.4 for static builds


Version 2.3 (2017-07-19)
========================

* Upgrade to Cornerstone 0.11.0
* Performance warning if runtime debug assertions are turned on
* Fix issue 44 (Bad interpretation of photometric interpretation MONOCHROME1)


Version 2.2 (2016-06-28)
========================

* Option "EnableGdcm" to replace the built-in decoder of Orthanc with GDCM
* Option "RestrictTransferSyntaxes" saying which transfer syntaxes should be decoded with GDCM
* Fixed rendering of 16bpp images if values are < 0 or >= 32768
* Decoding of JPEG2000 lossless images with YBR_RCT photometric interpretation


Version 2.1 (2015-12-10)
========================
