@@ -4,3 +4,4 @@ CMakeLists.txt.user
 *.cpp.orig
 *.h.orig
 *~
+.vscode/
