@@ -1,6 +1,8 @@
 Pending changes in the mainline
 ===============================
 
+* Fix XSS inside DICOM in Orthanc Web Viewer (as reported by Stuart Kurutac, NCC Group).  
+
 
 Version 2.7 (2020-12-10)
 ========================
